# nucleo-h755-embassy

./: Cargo.toml  README.md  toolchain.toml
.cargo/: config.toml
.github/workflows/: check.yml
.zed/: settings.json  tasks.json
assets/: STM32H7_Series.yaml  init.xls
core0/: Cargo.toml  Embed.toml  memory.x
core0/src/: main.rs
core1/: Cargo.toml  Embed.toml  build.rs  memory.x
core1/src/: main.rs
shared/: Cargo.toml  to-export.txt
shared/src/: lib.rs  rtt.rs  rtt_log.rs
src/: hsem.rs  main.rs
stm32h7hal-ext/: Cargo.toml
stm32h7hal-ext/src/: lib.rs
