[workspace]
resolver = "2"
members = ["core0", "core1"]

# [patch."https://github.com/embassy-rs/stm32-data-generated"]
# stm32-metapac = { path = "../stm32-data/build/stm32-metapac" }
# stm32-metapac = { git = "https://github.com/embassy-rs/stm32-data-generated", tag = "stm32-data-2480982cc5351ab08fe4ed13df5f8d52d6e5bef1", default-features = false, features = [
#     "metadata",
# ] }

# cargo build/run
[profile.dev]
codegen-units = 1
debug = 2
debug-assertions = true # <-
incremental = false
opt-level = 3           # <-
overflow-checks = true  # <-

# cargo test
[profile.test]
codegen-units = 1
debug = 2
debug-assertions = true # <-
incremental = false
opt-level = 3           # <-
overflow-checks = true  # <-

# cargo build/run --release
[profile.release]
codegen-units = 1
debug = 2
debug-assertions = false # <-
incremental = false
lto = 'fat'
opt-level = 3            # <-
overflow-checks = false  # <-
