[package]
name = "core1"
version = "0.1.0"
edition = "2021"

[dependencies]
chrono = { workspace = true }
cortex-m = { workspace = true, features = ["inline-asm", "critical-section-single-core"] }
cortex-m-rt = { workspace = true }
critical-section = { workspace = true }
defmt = { workspace = true }
defmt-rtt = { workspace = true }
embassy-executor = { workspace = true, features = ["task-arena-size-32768", "arch-cortex-m", "executor-thread", "defmt", "integrated-timers"] }
embassy-stm32 = { workspace = true, features = ["defmt", "stm32h747zi-cm7", "time-driver-any", "memory-x", "unstable-pac", "chrono"] }
embassy-sync = { workspace = true, features = ["defmt"] }
embassy-time = { workspace = true, features = ["defmt", "defmt-timestamp-uptime", "tick-hz-32_768"] }
embedded-hal = { workspace = true }
embedded-hal-1 = { workspace = true }
embedded-hal-async = { workspace = true }
embedded-io-async = { workspace = true }
embedded-nal-async = { workspace = true }
embedded-storage = { workspace = true }
futures = { workspace = true, features = ["async-await"] }
heapless = { workspace = true }
micromath = { workspace = true }
panic-probe = { workspace = true, features = ["print-defmt"] }
rand_core = { workspace = true }
static_cell = { workspace = true }
stm32-fmc = { workspace = true }
